AI-Powered-Customer-Support-and-Service-Automation/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>AI_Summary__c</fullName>
        <label>AI Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Score__c</fullName>
        <label>Performance Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active In Progress Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>